log

lu., 14 de ago. de 2023 12:12:54: 
 tests:  0|7
total_score: 0/70
d2daefb
mi., 16 de ago. de 2023 22:48:51: 
 exercises.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
1fa52c1
mi., 16 de ago. de 2023 22:49:35: 
 exercises.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 10/70
c6dfd6d
ju., 17 de ago. de 2023 16:10:10: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:1:0:
exercises.c: In function 'reverseArray':
exercises.c:40:9: error: unused variable 'aux' [-Werror=unused-variable]
     int aux = arr[posI];
         ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
20bcece
